# HyperCode-V1

./:  (2).coverage   (3).gitignore  .coverage  .gitignore  .pre-commit-config.yaml  AI_OPTIMIZATION_ROADMAP.md  ANNOUNCEMENT-v1.0.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_HYPERCODE.md  Daily-Checklist.md  GETTING_STARTED.md  GitHub-Setup-Guide.md  HYPERCODE-POWERHOUSE-COMPLETE.md  HYPERCODE-ULTIMATE-DEPLOYMENT.md  HYPER_DATABASE.md  How to Make HyperCode Irresistibly Attractive to AI Models  HyperAUTO  HyperCode-AI-Research.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_REPORT.md  INSTALL.md  LANGUAGE_SPEC.md  LAUNCH_ANNOUNCEMENT.md  LAUNCH_TWEETS.md  Makefile  PERPLEXITY_SPACE_DEV_REPORT.md  PHASE1_LAUNCH_CHECKLIST.md  PROFESSIONAL-SETUP.md  README.md  REALITY.md  RELEASE-NOTES-v1.0.md  RELEASE_NOTES_V1.0.md  SECURITY (2).md  SOCIAL.md  START_HERE.md  Technical Status Report  VISION.md  (+66 more)
.github/: dependabot.yml
5 Core TypeScript Modules/: README.md  code-analyzer.ts  extension.ts  package.json  tsconfig.json
DuelCode/: DUAL-CODING-FRAMEWORK.md  QUICK-REFERENCE.md  TEMPLATE-NEW-TUTORIAL.md  TEMPLATE-REFERENCE.md  TEMPLATE-TUTORIAL-ADVANCED.md  TEMPLATE-TUTORIAL-QUICK.md  duelcode_validator.py  enhanced_validator.py  test-report.json  test_framework.py  test_validator.py  tutorial-01-hello-world.md  (+4 more)
HyperFocus/: README.md  alembic.ini  pyproject.toml  setup.py  test_database.py
HyperFocus/hyperfocus/: __init__.py  config.yaml  core  database.py  db_utils.py  session.py  types.py
HyperFocus/migrations/versions/: 522cbe7c287c_initial_migration.py
HyperFocus/tests/: test-script  test_core.py
config/: .pre-commit-config.yaml  database.py  mcp.json  mkdocs.yml  pyproject.toml  releaserc.json  requirements-dev.txt  requirements.txt
config/.github/ISSUE_TEMPLATE/: feature_request.md
data/: db.py  (+6 more)
src/hypercode/HyperFocus/: MANIFEST.in  hyperfocus.db  pyproject.toml  setup.py
src/hypercode/HyperFocus/hyperfocus/: __init__.py  __main__.py  config.py  database.py  db_utils.py  session.py  setup.cfg
src/hypercode/HyperFocus/migrations/: env.py
src/hypercode/HyperFocus/migrations/versions/: 522cbe7c287c_initial_migration.py
src/hypercode/HyperFocus/tests/: test_core.py
src/hypercode/hypercode/: .pre-commit-config.yaml  __init__.py  build-hyper-database.py  hypercode_manager_enhanced.py  pyproject.toml
src/hypercode/hypercode/HyperCode showcase/: package.json
src/hypercode/hypercode/benchmarks/: __init__.py
src/hypercode/hypercode/db/: models.py  query.py
src/hypercode/hypercode/docs/: ANNOUNCEMENT-v1.0.md  BETA_TESTER_GUIDE.md  DEVELOPMENT.md  LANGUAGE_OVERVIEW.md  STRATEGY-README.md
src/hypercode/hypercode/docs/research/: RESEARCH_ROADMAP.md
src/hypercode/hypercode/examples/: neuro_development_demo.py
src/hypercode/hypercode/hypercode/: build-hyper-database.py  pyproject.toml
src/hypercode/hypercode/hypercode/HyperCode 2.0V/hypercode-vision/: hypercode_2_0_complete_roadmap.json
src/hypercode/hypercode/hypercode/HyperCode showcase/: ROADMAP.md
src/hypercode/hypercode/hypercode/HyperCode showcase/src/__tests__/: hypercode.test.ts
src/hypercode/hypercode/hypercode/benchmarks/: benchmarks_lexer.py
src/hypercode/hypercode/hypercode/config/: mcp.json
src/hypercode/hypercode/hypercode/docs/: 1-roadmap.md  AI_INTEGRATION_GUIDE.md  CHANGELOG.md  QUICK_START.md  knowledge-base.md
src/hypercode/hypercode/hypercode/live_research/: github_publisher.py
src/hypercode/hypercode/hypercode/mcp/: STATUS.md  mcp servers on  requirements.txt  start_servers.py
src/hypercode/hypercode/hypercode/mcp/servers/: __init__.py  aws_cli.py  human_input.py  hypercode_syntax.py  web_search.py
src/hypercode/hypercode/hypercode/new files to check/backend/research/: db.py
src/hypercode/hypercode/hypercode/server/: package.json
src/hypercode/hypercode/hypercode/src/: TEMPLATE-REFERENCE.md  build.py  hypercode-lexer-COMPLETE.py  hypercode-parser-COMPLETE.py  hypercode_lexer_enhanced.py  main.hc  prompt_normalizer.py  setup.py  test_framework.py
src/hypercode/hypercode/hypercode/src/core/: __init__.py  ast.py  interpreter.py  lexer.py  parser.py  tokens.py
src/hypercode/hypercode/hypercode/src/core/hypercode-proto/: app.js  index.html
src/hypercode/hypercode/hypercode/src/examples/: hello.hc
src/hypercode/hypercode/hypercode/src/hypercode/: __main__.py  config.py  repl.py
src/hypercode/hypercode/hypercode/src/hypercode/cli/: __init__.py
src/hypercode/hypercode/hypercode/src/hypercode/core/: interpreter.py  lexer.py  tokens.py
src/hypercode/hypercode/hypercode/src/parser/: debug_parser.py  visual_syntax_parser.py
src/hypercode/hypercode/hypercode/src/utils/: code_analyzer_ai.py  health_scanner_ai.py  import_all_space_data.py  import_hypercode_data.py  perplexity_space_integration.py
src/hypercode/hypercode/hypercode/tasks/: T-001-visual-interface.md
src/hypercode/hypercode/hypercode/tests/: test_interpreter.py  test_lexer.py  test_lexer_enhanced.py  test_parser.py  test_perplexity_client.py
src/hypercode/hypercode/hypercode/tests/integration/: __init__.py
src/hypercode/hypercode/hypercode/tests/unit/: test_basics.py
src/hypercode/hypercode/knowledge_graph/: sparql_query.py
src/hypercode/hypercode/mcp/servers/: valkey_service.py
src/hypercode/hypercode/new files to check/backend/research/: __init__.py  models.py
src/hypercode/hypercode/new files to check/backend/research/scripts/: import_sources_from_folder.py  seed_basic_data.py
src/hypercode/hypercode/research/: config.py  requirements.txt
src/hypercode/hypercode/src/: TEMPLATE-TUTORIAL-QUICK.md
src/hypercode/hypercode/src/duelcode/: tutorial-03-math.md
src/hypercode/hypercode/src/hypercode/: __main__.py  enhanced_perplexity_client.py  perplexity_client.py  repl.py
src/hypercode/hypercode/src/hypercode/core/: ast.py  parser.py  sensory_profile.py  tokens.py
src/hypercode/hypercode/src/utils/: debug_search.py  demo_ai_research.py  demo_enhanced_client.py  run_lexer.py
src/hypercode/hypercode/visualization/: neuro_visualizer.py
(+461 files in other folders)
