[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypercode"
version = "0.1.0"
description = "HyperCode - A modern code processing framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    # Add your main dependencies here
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.0.0",
    "psutil>=5.9.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "sphinx>=5.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "requests>=2.28.0",
    "pydantic>=1.10.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "B", "C4", "SIM", "TCH", "ARG", "PTH"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
