[metadata]
name = hypercode
version = 0.1.0
description = HyperCode language implementation
author = welshDog (Lyndz Williams)
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    # Add your dependencies here
    # example: requests>=2.25.0

test_suite = tests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hypercode = hypercode.cli.main:main

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
per-file-ignores =
    # Allow print statements in tests
    tests/*.py: T201

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True

[coverage:run]
source = src
branch = True
omit =
    tests/*
    */__init__.py

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 80

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[bdist_wheel]
universal = 1
