[metadata]
name = hypercode
version = 0.1.0
description = HyperCode language implementation
author = welshDog (Lyndz Williams)
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    # Core Dependencies
    antlr4-python3-runtime>=4.13.0
    pyyaml>=6.0
    rich>=13.0.0
    click>=8.1.0
    pydantic>=2.0.0
    typing-extensions>=4.5.0

[options.extras_require]
dev = [
    # Development tools
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "pre-commit>=3.0.0",
]
test = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "hypothesis>=6.0.0",
]
docs = [
    # Documentation
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
    "sphinx-copybutton>=0.5.0",
]

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hypercode = hypercode.cli.main:main

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
per-file-ignores =
    # Allow print statements in tests
    tests/*.py: T201

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True