[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperfocus"
version = "0.1.0"
description = "A hyperfocus productivity tool"
readme = "README.md"
authors = [
    {name="Your Name", email="your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0.0",
    "pydantic>=1.8.0",
    "pyyaml>=6.0",
    "typer>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0",
    "isort>=5.0.0",
    "mypy>=0.900",
]

[project.scripts]
hyperfocus = "hyperfocus.__main__:app"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
