[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypercode"
version = "0.1.0"
description = "Neurodivergent-first programming language with AI compatibility"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "hypercode"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
    "ruff>=0.0.270",
    "mkdocs-material>=9.1.0",
    "mkdocs-git-revision-date-plugin>=1.2.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "I", "N", "UP", "W", "B", "C4", "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "UP", "YTT"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
